k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-boilerplate
  labels:
    app: api-boilerplate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-boilerplate
  template:
    metadata:
      labels:
        app: api-boilerplate
    spec:
      containers:
        - name: api-boilerplate
          image: api-boilerplate
          ports:
            - containerPort: 3000
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 3000
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
          # readinessProbe:
          #   httpGet:
          #     path: /readyz
          #     port: 3000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-boilerplate
spec:
  selector:
    app: api-boilerplate
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-boilerplate-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-boilerplate.localdev
      http:
        paths:
          - path: /
            backend:
              serviceName: api-boilerplate
              servicePort: 3000
